--- a/cloud-node/docker-compose.yml
+++ b/cloud-node/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   influxdb:
     image: influxdb:2.7
@@ -10,29 +8,29 @@ services:
     env_file:
       - ../.env
     environment:
-      - DOCKER_INFLUXDB_INIT_MODE=setup
-      - DOCKER_INFLUXDB_INIT_USERNAME=admin
-      - DOCKER_INFLUXDB_INIT_PASSWORD=admin123
-      - DOCKER_INFLUXDB_INIT_ORG=${INFLUXDB_ORG}
-      - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUXDB_BUCKET}
-      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${INFLUXDB_TOKEN}
+      DOCKER_INFLUXDB_INIT_MODE: "setup"
+      DOCKER_INFLUXDB_INIT_USERNAME: "admin"
+      DOCKER_INFLUXDB_INIT_PASSWORD: "admin123"
+      DOCKER_INFLUXDB_INIT_ORG: "${INFLUXDB_ORG}"
+      DOCKER_INFLUXDB_INIT_BUCKET: "${INFLUXDB_BUCKET}"
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: "${INFLUXDB_TOKEN}"
     restart: unless-stopped
 
   subscriber:
-    build:
-      context: ../subscriber
+    image: ghcr.io/gent1b/iot-subscriber:latest
+    pull_policy: always
     env_file:
       - ../.env
     environment:
-      - BROKER=${BROKER}
-      - INFLUXDB_URL=${INFLUXDB_URL}
-      - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
-      - INFLUXDB_ORG=${INFLUXDB_ORG}
-      - INFLUXDB_BUCKET=${INFLUXDB_BUCKET}
-      - SUBSCRIBER_QUEUE_MAX=10000
-      - INFLUX_BATCH_SIZE=100
+      BROKER: "${BROKER}"
+      INFLUXDB_URL: "${INFLUXDB_URL}"
+      INFLUXDB_TOKEN: "${INFLUXDB_TOKEN}"
+      INFLUXDB_ORG: "${INFLUXDB_ORG}"
+      INFLUXDB_BUCKET: "${INFLUXDB_BUCKET}"
+      SUBSCRIBER_QUEUE_MAX: "10000"
+      INFLUX_BATCH_SIZE: "100"
     ports:
-      - "8000:8000"   # Prometheus metrics from subscriber
+      - "8000:8000"
     depends_on:
       - influxdb
     restart: unless-stopped
@@ -48,11 +46,11 @@ services:
       - /sys:/host/sys:ro
       - /etc:/host/etc:ro
     environment:
-      - HOST_PROC=/host/proc
-      - HOST_SYS=/host/sys
-      - HOST_ETC=/host/etc
+      HOST_PROC: "/host/proc"
+      HOST_SYS: "/host/sys"
+      HOST_ETC: "/host/etc"
     ports:
-      - "9273:9273"   # Prometheus scrapes Telegraf here
+      - "9273:9273"
     depends_on:
       - influxdb
       - subscriber
