--- a/monitoring-node/docker-compose.yml
+++ b/monitoring-node/docker-compose.yml
@@ -1,8 +1,7 @@
-version: "3.8"
-
 services:
   prometheus:
     image: prom/prometheus:latest
+    pull_policy: always
     container_name: prometheus
     ports:
       - "9090:9090"
@@ -12,18 +11,19 @@ services:
 
   grafana:
     image: grafana/grafana:latest
+    pull_policy: always
     container_name: grafana
     ports:
       - "3000:3000"
     env_file:
       - ../.env
     environment:
-      - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
-      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
-      - INFLUXDB_URL=${INFLUXDB_URL}
-      - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
-      - INFLUXDB_ORG=${INFLUXDB_ORG}
-      - INFLUXDB_BUCKET=${INFLUXDB_BUCKET}
+      GF_SECURITY_ADMIN_USER: "${GF_SECURITY_ADMIN_USER}"
+      GF_SECURITY_ADMIN_PASSWORD: "${GF_SECURITY_ADMIN_PASSWORD}"
+      INFLUXDB_URL: "${INFLUXDB_URL}"
+      INFLUXDB_TOKEN: "${INFLUXDB_TOKEN}"
+      INFLUXDB_ORG: "${INFLUXDB_ORG}"
+      INFLUXDB_BUCKET: "${INFLUXDB_BUCKET}"
     volumes:
       - ./grafana/provisioning:/etc/grafana/provisioning
     depends_on:
