--- a/monitoring-node/docker-compose.yml
+++ b/monitoring-node/docker-compose.yml
@@ -1,22 +1,16 @@
 services:
   prometheus:
     image: prom/prometheus:latest
-    pull_policy: always
-    container_name: prometheus
-    ports:
-      - "9090:9090"
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
     restart: unless-stopped
 
   grafana:
     image: grafana/grafana:latest
-    pull_policy: always
-    container_name: grafana
-    ports:
-      - "3000:3000"
     env_file:
-      - ../.env
+      - .env
     environment:
       GF_SECURITY_ADMIN_USER: "${GF_SECURITY_ADMIN_USER}"
       GF_SECURITY_ADMIN_PASSWORD: "${GF_SECURITY_ADMIN_PASSWORD}"
@@ -24,8 +18,8 @@ services:
       INFLUXDB_TOKEN: "${INFLUXDB_TOKEN}"
       INFLUXDB_ORG: "${INFLUXDB_ORG}"
       INFLUXDB_BUCKET: "${INFLUXDB_BUCKET}"
-    volumes:
-      - ./grafana/provisioning:/etc/grafana/provisioning
+    ports:
+      - "3000:3000"
     depends_on:
       - prometheus
     restart: unless-stopped
