--- a/mqtt-node/docker-compose.yml
+++ b/mqtt-node/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   mqtt_broker:
     image: eclipse-mosquitto
@@ -7,17 +5,15 @@ services:
       - "1883:1883"
     volumes:
       - ./mosquitto_config:/mosquitto/config
-    healthcheck:
-      test: ["CMD", "sh", "-c", "nc -z localhost 1883"]
-      interval: 10s
-      retries: 3
     restart: unless-stopped
 
   broker_monitor:
-    image: ghcr.io/gent1b/iot-broker-monitor:latest   # <-- GHCR image
+    image: ghcr.io/gent1b/iot-broker-monitor:latest
     pull_policy: always
-    depends_on:
-      - mqtt_broker
+    env_file:
+      - .env
     ports:
       - "8001:8001"
+    depends_on:
+      - mqtt_broker
     restart: unless-stopped
