--- a/monitoring-node/docker-compose.yml
+++ b/monitoring-node/docker-compose.yml
@@ -9,17 +9,17 @@ services:
 
   grafana:
     image: grafana/grafana:latest
+    container_name: grafana
     env_file:
       - .env
     environment:
       GF_SECURITY_ADMIN_USER: "${GF_SECURITY_ADMIN_USER}"
       GF_SECURITY_ADMIN_PASSWORD: "${GF_SECURITY_ADMIN_PASSWORD}"
-      INFLUXDB_URL: "${INFLUXDB_URL}"
-      INFLUXDB_TOKEN: "${INFLUXDB_TOKEN}"
-      INFLUXDB_ORG: "${INFLUXDB_ORG}"
-      INFLUXDB_BUCKET: "${INFLUXDB_BUCKET}"
     ports:
       - "3000:3000"
+    volumes:
+      - ./grafana/provisioning:/etc/grafana/provisioning   # your dashboards or datasources
+      - ./grafana_data:/var/lib/grafana                    # <-- THIS MAKES DASHBOARDS PERSIST
     depends_on:
       - prometheus
     restart: unless-stopped
