--- a/cloud-node/telegraf/telegraf.conf
+++ b/cloud-node/telegraf/telegraf.conf
@@ -1,8 +1,50 @@
+# ================================================
+#  GLOBAL AGENT SETTINGS
+# ================================================
+[agent]
+  interval = "5s"
+  round_interval = true
+  metric_batch_size = 1000
+  metric_buffer_limit = 10000
+  collection_jitter = "0s"
+  flush_interval = "5s"
+  flush_jitter = "0s"
+  omit_hostname = false
+
+# ================================================
+#  DOCKER METRICS (MODERN SYNTAX)
+# ================================================
 [[inputs.docker]]
   endpoint = "unix:///var/run/docker.sock"
+  gather_services = false
+  container_name_include = []
+  container_name_exclude = []
   timeout = "5s"
-  perdevice = true
-  total = true
 
+# ================================================
+#  HOST METRICS
+# ================================================
+[[inputs.cpu]]
+  percpu = true
+  totalcpu = true
+
+[[inputs.mem]]
+
+[[inputs.disk]]
+  ignore_fs = ["tmpfs", "devtmpfs", "overlay"]
+
+[[inputs.diskio]]
+
+[[inputs.system]]
+
+[[inputs.processes]]
+
+[[inputs.net]]
+
+# ================================================
+#  PROMETHEUS EXPORTER
+# ================================================
 [[outputs.prometheus_client]]
   listen = ":9273"
+  path = "/metrics"
+  expiration_interval = "60s"
