--- a/cloud-node/docker-compose.yml
+++ b/cloud-node/docker-compose.yml
@@ -36,7 +36,7 @@ services:
   telegraf:
     image: telegraf:latest
     container_name: telegraf
-    user: "telegraf:0"
+    user: root
     volumes:
       - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
       - /var/run/docker.sock:/var/run/docker.sock
