--- a/monitoring-node/docker-compose.yml
+++ b/monitoring-node/docker-compose.yml
@@ -10,15 +10,22 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
-    env_file:
-      - /opt/iot-env/monitor.env
-    environment:
-      GF_SECURITY_ADMIN_USER: "${GF_SECURITY_ADMIN_USER}"
-      GF_SECURITY_ADMIN_PASSWORD: "${GF_SECURITY_ADMIN_PASSWORD}"
     ports:
       - "3000:3000"
+    env_file:
+      - /opt/iot-env/cloud.env
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+      - INFLUXDB_URL=${INFLUXDB_URL}
+      - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
+      - INFLUXDB_ORG=${INFLUXDB_ORG}
+      - INFLUXDB_BUCKET=${INFLUXDB_BUCKET}
+      - PROMETHEUS_URL=${PROMETHEUS_URL}
     volumes:
+      - grafana_data:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning
     depends_on:
+      - influxdb
       - prometheus
-    restart: unless-stopped
+
