--- a/monitoring-node/grafana/provisioning/datasources/prometheusdata.yaml
+++ b/monitoring-node/grafana/provisioning/datasources/prometheusdata.yaml
@@ -1,10 +1,11 @@
 apiVersion: 1
+
 datasources:
   - name: Prometheus
     uid: prometheus
     type: prometheus
     access: proxy
-    url: http://prometheus:9090
+    url: ${PROMETHEUS_URL}
     isDefault: false
     jsonData:
       timeInterval: 15s
