--- a/monitoring-node/docker-compose.yml
+++ b/monitoring-node/docker-compose.yml
@@ -13,11 +13,11 @@ services:
     container_name: grafana
     env_file:
       - /opt/iot-env/monitor.env
-
     ports:
       - "3000:3000"
     volumes:
       - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning
     restart: unless-stopped
 
 volumes:
