added node exporter to cloud

--- a/cloud-node/docker-compose.yml
+++ b/cloud-node/docker-compose.yml
@@ -32,6 +32,21 @@ services:
     depends_on:
       - influxdb
     restart: unless-stopped
+    
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    pid: host
+    network_mode: host
+    restart: unless-stopped
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--path.rootfs=/rootfs'
 
   telegraf:
       image: telegraf:latest
